--- a/pom.xml
+++ b/pom.xml
@@ -61,20 +61,6 @@
         </dependency>
 
 	</dependencies>
-  <build>
-	<plugins>
-	<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M9</version>
-        <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>${suite}</suiteXmlFile>
-          </suiteXmlFiles>
-        </configuration>
-      </plugin>
-	</plugins>
-	</build>
 	
 <profiles>
 	<profile>
@@ -87,7 +73,7 @@
         <version>3.0.0-M9</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>${suite}</suiteXmlFile>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
             
           </suiteXmlFiles>
         </configuration>
