--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <version>3.0.0-M9</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>${suite}</suiteXmlFile>
             
           </suiteXmlFiles>
         </configuration>
